# AudioPipe

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/asdfg/soundmaster/: MainActivity.kt
app/src/main/java/com/asdfg/soundmaster/adb/: AdbClient.kt  AdbKey.kt  AdbMdns.kt  AdbMessage.kt  AdbProtocol.kt  ShellExecutor.kt
app/src/main/java/com/asdfg/soundmaster/audio/: AudioPlayer.kt  PlayBackThread.kt  SoundMasterService.kt
app/src/main/jni/: CMakeLists.txt
app/src/main/res/drawable/: ic_launcher_foreground.xml  status_indicator_green.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/asdfg/soundmaster/audio/: SoundMasterServiceTest.kt
